Archive2/fa/0824796ba7a980/output
main.cpp:63:11: error: expected ')'
int main(){
          ^
main.cpp:61:15: note: to match this '('
auto take = [](
              ^
main.cpp:70:2: error: expected body of lambda expression
}
 ^
main.cpp:70:2: error: expected ';' after top level declarator
}
 ^
 ;
3 errors generated.
